--- a/hostingstart.html
+++ b/hostingstart.html
@@ -48,6 +48,8 @@
         <p>I'm working hard to launch my new blog site.</p>
         <p>Stay tuned!</p>
         <a href="mailto:bellsblog@bells.at">Contact me</a>
+
+        <li><a href="/src/AboutMe.html">About Me</a></li>
     </div>
 </body>
 </html>
