--- a/landingpage.html
+++ b/landingpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bells Blog</title>
+    <title>Bell's Blog Landingpage</title>
 </head>
 <body>
     <header>
