--- a/AboutMe.html
+++ b/AboutMe.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h2>Ein wenig über mich</h2>
-            <img src="your-photo.jpg" alt="Ihr Foto" width="200" height="200">
+            <img src="/AboutMe.png" alt="Markus B." width="auto" height="auto">
             <p>Hallo! Ich bin [Ihr Name], der Autor dieses Blogs. Ich habe eine Leidenschaft für [Ihre Interessen] und liebe es, meine Gedanken und Erfahrungen mit der Welt zu teilen. Auf diesem Blog finden Sie Artikel über [Blog-Themen], Tipps und Tricks, sowie persönliche Geschichten aus meinem Alltag.</p>
             <p>Wenn Sie mehr über mich erfahren möchten oder Fragen haben, zögern Sie nicht, mich zu kontaktieren. Ich freue mich darauf, von Ihnen zu hören!</p>
         </section>
