added new links

--- a/hostingstart.html
+++ b/hostingstart.html
@@ -50,6 +50,7 @@
         <p>
             <a href="/AboutMe.html">About me</a>
         </p>
+        <p><a href="/landingpage.html">About the Blog</a></p>
         <a href="mailto:bellsblog@bells.at">Contact me</a>
     </div>
 </body>
