--- a/landingpage.html
+++ b/landingpage.html
@@ -40,7 +40,8 @@
     </style>
 </head>
 <body>
-    <header>
+
+    <div class="container">
         <h1>Welcome to My Blog!</h1>
         <nav>
             <ul>
@@ -50,7 +51,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
     <main>
         <section>
             <article>
