--- a/landingpage.html
+++ b/landingpage.html
@@ -45,7 +45,7 @@
         <h1>Welcome to My Blog!</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/hostingstart.html">Home</a></li>
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Articles</a></li>
                 <li><a href="#">Contact</a></li>
