--- a/landingpage.html
+++ b/landingpage.html
@@ -46,7 +46,7 @@
         <nav>
             <ul>
                 <li><a href="/hostingstart.html">Home</a></li>
-                <li><a href="#">About Me</a></li>
+                <li><a href="/AboutMe.html">About Me</a></li>
                 <li><a href="#">Articles</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
