--- a/AboutMe.html
+++ b/AboutMe.html
@@ -44,7 +44,7 @@
         <h1>Über mich</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/hostingstart.html">Home</a></li>
                 <li><a href="about.html">Über mich</a></li>
                 <li><a href="articles.html">Artikel</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
