--- a/AboutMe.html
+++ b/AboutMe.html
@@ -44,8 +44,8 @@
         <h1>Über mich</h1>
         <nav>
             <ul>
-                <li><a href="/hostingstart.html">Home</a></li>
-                <li><a href="about.html">Über mich</a></li>
+                <li><a href="hostingstart.html">Home</a></li>
+                <li><a href="AboutMe.html">Über mich</a></li>
                 <li><a href="articles.html">Artikel</a></li>
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
