--- a/AboutMe.html
+++ b/AboutMe.html
@@ -54,7 +54,7 @@
     <main>
         <section>
             <h2>Ein wenig über mich</h2>
-            <img src="/AboutMe.png" alt="Markus B." width="auto" height="auto">
+            <img src="/img/AboutMe.png" alt="Markus B." width="auto" height="auto">
             <p>Hallo! Ich bin Markus, der Autor dieses Blogs. Ich habe eine Leidenschaft für Cloud und liebe es, meine Gedanken und Erfahrungen mit der Welt zu teilen. Auf diesem Blog finden Sie Artikel über Cloud-Themen, sowie Tipps und Tricks darüber.</p>
             <p>Wenn Sie mehr über mich erfahren möchten oder Fragen haben, zögern Sie nicht, mich zu kontaktieren. Ich freue mich darauf, von Ihnen zu hören!</p>
         </section>
