--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,7 +16,7 @@
             background-color: #f7f7f7;
         }
         .container {
-            text-align: center;
+            text-align: left;
         }
         h1 {
             font-size: 2.5rem;
@@ -33,9 +33,9 @@
             text-decoration: underline;
         }
         img {
-            width: 50%;
+            width: auto;
             height: auto;
-            border: 0;
+            border: 20;
         }
     </style>
 </head>
