changed about me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,8 +10,8 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: left;
+            align-items: left;
             height: 100vh;
             background-color: #f7f7f7;
         }
@@ -41,25 +41,57 @@
 </head>
 <body>
     <header>
-        <h1>Über mich</h1>
-        <nav>
-            <ul>
-                <li><a href="hostingstart.html">Home</a></li>
-                <li><a href="AboutMe.html">Über mich</a></li>
-                <li><a href="articles.html">Artikel</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Über mich</h1>
+            <nav>
+                <ul>
+                    <li><a href="hostingstart.html">Home</a></li>
+                    <li><a href="AboutMe.html">Über mich</a></li>
+                    <li><a href="articles.html">Artikel</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>    
     </header>
     <main>
-        <section>
-            <h2>Ein wenig über mich</h2>
-            <img src="/img/AboutMe.png" alt="Markus B." width="auto" height="auto">
-            <p>Hallo! Ich bin Markus, der Autor dieses Blogs. Ich habe eine Leidenschaft für Cloud und liebe es, meine Gedanken und Erfahrungen mit der Welt zu teilen. Auf diesem Blog finden Sie Artikel über Cloud-Themen, sowie Tipps und Tricks darüber.</p>
-            <p>Wenn Sie mehr über mich erfahren möchten oder Fragen haben, zögern Sie nicht, mich zu kontaktieren. Ich freue mich darauf, von Ihnen zu hören!</p>
-        </section>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                background-color: #f7f7f7;
+            }
+            .container {
+                text-align: left;
+            }
+        </style>
+            <section>
+                <h2>Ein wenig über mich</h2>
+                <img src="/img/AboutMe.png" alt="Markus B." width="auto" height="auto">
+                <p>Hallo! Ich bin Markus, der Autor dieses Blogs. Ich habe eine Leidenschaft für Cloud und liebe es, meine Gedanken und Erfahrungen mit der Welt zu teilen. Auf diesem Blog finden Sie Artikel über Cloud-Themen, sowie Tipps und Tricks darüber.</p>
+                <p>Wenn Sie mehr über mich erfahren möchten oder Fragen haben, zögern Sie nicht, mich zu kontaktieren. Ich freue mich darauf, von Ihnen zu hören!</p>
+            </section>
     </main>
     <footer>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                background-color: #f7f7f7;
+            }
+            .container {
+                text-align: left;
+            }
+        </style>
         <p>&copy; 2024 Ihr Name. Alle Rechte vorbehalten.</p>
     </footer>
 </body>
