changed picture in About Me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -33,7 +33,7 @@
             text-decoration: underline;
         }
         img {
-            width: auto;
+            width: 20%;
             height: auto;
             border: 20;
         }
