--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,40 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: left;
-            align-items: left;
-            height: 100vh;
-            background-color: #f7f7f7;
-        }
-        .container {
-            text-align: left;
-        }
-        h1 {
-            font-size: 2.5rem;
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-        a {
-            color: #007bff;
-            text-decoration: azure;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        img {
-            width: 20%;
-            height: auto;
-            border: 20;
-        }
-    </style>
+
 </head>
 <body>
     <header>
@@ -60,8 +27,8 @@
                 margin: 0;
                 padding: 0;
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                justify-content: left;
+                align-items: right;
                 height: 100vh;
                 background-color: #f7f7f7;
             }
@@ -84,7 +51,7 @@
                 padding: 0;
                 display: flex;
                 justify-content: center;
-                align-items: center;
+                align-items: normal;
                 height: 100vh;
                 background-color: #f7f7f7;
             }
