--- a/AboutMe.html
+++ b/AboutMe.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </a>
-<a href="index.html" style="text-decoration:none">
+<a href="hostingstart.html" style="text-decoration:none">
 	<div id="menuentry_46613699"  class="menustyle1 menu_63ddebe7_mainMenuEntry normalEntry">
 		<div class="menuentry_text2">
             <span class="textstyle5">Home</span>
