--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 </head>
 <body style="background-color:#737373; padding:0;  margin: 0;">
 <div style="text-align:center;">
-<div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:91px; max-width:1024px; background-color:#FFFFFF; background-image: url(img/skyscraper1_dark.jpg); background-position:center center; background-size:cover; " id="container_5ca6f556"><div style="margin: 10px; display: block; " id="container_5ca6f556_padding" ><div style="text-align:center;">  <span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.784314); "><br/></span>
+<div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:91px; max-width:1024px; background-color:#FFFFFF; background-image: url(img/skyscraper1_dark1.jpg); background-position:center center; background-size:cover; " id="container_5ca6f556"><div style="margin: 10px; display: block; " id="container_5ca6f556_padding" ><div style="text-align:center;">  <span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.784314); "><br/></span>
 <h1 style="vertical-align: bottom; position:relative; display: inline-block; background:none; font-size:24pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; text-align:left; font-weight:bold; " id="heading_435f310d">Bell's Blog</h1></div>
 <div style="clear:both"></div></div></div>  </div>
 <div style="text-align:left;">
