--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 </head>
 <body style="background-color:#737373; padding:0;  margin: 0;">
 <div style="text-align:center;">
-  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:91px; max-width:1024px; background-color:#FFFFFF; background-position:center center; background-size:cover; " id="container_51330adb">
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:91px; max-width:1024px; background-color:#FFFFFF; background-image: url(rc_images/skyscraper1_dark1.jpg); background-position:center center; background-size:cover; " id="container_51330adb">
     <div style="margin: 10px; display: block; " id="container_51330adb_padding" >
       <div style="text-align:center;">
         <span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.784314); "><br/></span>
@@ -105,7 +105,7 @@
   <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:70px; max-width:1024px; background-color:#FFFFFF; " id="container_62a75dad">
     <div style="margin: 10px; display: block; " id="container_62a75dad_padding" >
       <div style="text-align:center;">
-<span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#E5B340; font-weight:bold; line-height: 1.5; "><br/>Contact</span><span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span><span style="font-size:14pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; ">Feel free to reach out for me</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; ">t:<br/><br/>Bells Beratung<br/><br/>Anton-Baumgartnerstrasse 44<br/>Vienna, AT-1230<br/>email: blog@bells.at</span>        </div>
+<span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#E5B340; font-weight:bold; line-height: 1.5; "><br/>Contact</span><span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span><span style="font-size:14pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; ">Feel free to reach out for me</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; ">:<br/><br/>Bells Beratung<br/><br/>Anton-Baumgartnerstrasse 44<br/>Vienna, AT-1230<br/>email: blog@bells.at</span>        </div>
       <div style="text-align:left;">
 <span style="font-size:12pt; font-family:'Palatino Linotype', 'Book Antiqua3', Palatino, serif; color:#000000; line-height: 1.5; "><br/></span>        </div>
       </div>
@@ -123,14 +123,14 @@
 <span style="font-size:14pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Best Service</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/>I offer comprehensive cloud consulting and training services designed to help businesses navigate the complexities of cloud computing. My consulting services include cloud strategy planning, migration, and infrastructure management, ensuring your organization leverages the full potential of cloud technology. </span>                  </div>
                 </div>
               </div>
-            <div style="vertical-align: top; position:relative; display: inline-block; width:33%; min-height:150px; background:none; " id="container_785adad6">
+            <div style="vertical-align: top; position:relative; display: inline-block; width:33%; min-height:329px; background:none; " id="container_785adad6">
               <div style="margin: 10px; display: block; " id="container_785adad6_padding" >
                 <div style="text-align:left;">
 <span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Training</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">Additionally, I provide tailored training programs to equip your team with the necessary skills to manage and optimize cloud environments effectively. Whether you’re looking to adopt cloud solutions or enhance your existing infrastructure, my expertise will guide you through every step of the process, ensuring a seamless and efficient transition.</span>                  <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "> </span>
                   </div>
                 </div>
               </div>
-            <div style="vertical-align: top; position:relative; display: inline-block; width:33%; min-height:150px; background:none; " id="container_78d937b7">
+            <div style="vertical-align: top; position:relative; display: inline-block; width:34%; min-height:296px; background:none; " id="container_78d937b7">
               <div style="margin: 10px; display: block; " id="container_78d937b7_padding" >
                 <div style="text-align:left;">
 <span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Costmanagement</span><span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/><br/>I specialize in cloud consulting and training services with a strong emphasis on cost management. My consulting services include developing cost-effective cloud strategies, optimizing resource allocation, and implementing cost-saving measures to ensure your organization maximizes its cloud investment.</span>                  </div>
