--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 </head>
 <body style="background-color:#737373; padding:0;  margin: 0;">
 <div style="text-align:center;">
-  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:91px; max-width:1024px; background-color:#FFFFFF; background-image: url(rc_images/skyscraper1_dark1.jpg); background-position:center center; background-size:cover; " id="container_51330adb">
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:91px; max-width:1024px; background-color:#FFFFFF; background-image: url(img/skyscraper1_dark1.jpg); background-position:center center; background-size:cover; " id="container_51330adb">
     <div style="margin: 10px; display: block; " id="container_51330adb_padding" >
       <div style="text-align:center;">
         <span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF; text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.784314); "><br/></span>
@@ -84,7 +84,7 @@
 	</div>
 </a>
 
-	<script type="text/javascript" src="rc_images/wsp_menu.js"></script>
+	<script type="text/javascript" src="img/wsp_menu.js"></script>
 	<script type="text/javascript">
 		var js_menu_3720dca3= new wsp_menu('menu_3720dca3', 'menu_3720dca3', 10, null, true);
 
