--- a/intro.html
+++ b/intro.html
@@ -37,7 +37,7 @@
 </head>
 <body style="background-color:#737373; padding:0;  margin: 0;">
 <div style="text-align:center;">
-  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:201px; max-width:1024px; background-color:#FFFFFF; background-image: url(rc_images/skyscraper1_dark1.jpg); background-position:top center; background-size:cover; " id="container_3c89489e">
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:201px; max-width:1024px; background-color:#FFFFFF; background-image: url(img/skyscraper1_dark1.jpg); background-position:top center; background-size:cover; " id="container_3c89489e">
     <div style="margin: 10px; display: block; " id="container_3c89489e_padding" >
       <div style="text-align:center;">
         <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/><br/><br/></span>
@@ -79,7 +79,7 @@
 	</div>
 </a>
 
-	<script type="text/javascript" src="rc_images/wsp_menu.js"></script>
+	<script type="text/javascript" src="img/wsp_menu.js"></script>
 	<script type="text/javascript">
 		var js_menu_3bd38d17= new wsp_menu('menu_3bd38d17', 'menu_3bd38d17', 10, null, true);
 
