--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
       <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_638ba834">
         <div style="margin: 10px; display: block; " id="container_638ba834_padding" >
           <div style="text-align:left;">
-            <div style="vertical-align: top; position:relative; display: inline-block; width:49%; min-height:246px; background:none; " id="container_1364a63e">
+            <div style="vertical-align: top; position:relative; display: inline-block; float:left; width:48%; min-height:246px; background:none; " id="container_1364a63e">
               <div style="margin: 10px; display: block; " id="container_1364a63e_padding" >
                 <div style="text-align:left;">
                   <span style="font-size:22pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">☼ </span>
 <span style="font-size:18pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; "><br/></span><span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Best Service</span><span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/><br/>The cloud provides robust services with a range of benefits, including cost savings, comprehensive security standards, and a wide array of services and governance tools. It supports a variety of workloads, ensuring optimal performance and scale for cloud applications.</span>                  </div>
                 </div>
               </div>
-            <div style="vertical-align: top; position:relative; display: inline-block; width:51%; min-height:244px; background:none; " id="container_478afb3">
+            <div style="vertical-align: top; position:relative; display: inline-block; float:right; width:48%; min-height:244px; background:none; " id="container_478afb3">
               <div style="margin: 10px; display: block; " id="container_478afb3_padding" >
                 <div style="text-align:left;">
 <span style="font-size:22pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">♺</span><span style="font-size:14pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; "><br/></span><span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Eco-friendly</span><span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/><br/>Cloud computing is eco-friendly due to its efficient use of energy and resources, reduced carbon footprint through centralized operations, and commitment to sustainability by utilizing renewable energy and optimizing equipment use</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">. </span>                  </div>
