updated privacy nd scroll text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:14px; background-color:#2C2825; " id="container_23932c22">
     <div style="margin: 10px; display: block; " id="container_23932c22_padding" >
       <div style="text-align:center;">
-        <div id="menu_3dae042d" style="vertical-align: bottom; position:relative; display: inline-block; width:336px; height:34px; max-width:800px; text-align:left; background:none; ">
+        <div id="menu_3dae042d" style="vertical-align: bottom; position:relative; display: inline-block; width:323px; height:34px; max-width:800px; text-align:left; background:none; ">
           <div  style="position: relative; overflow: hidden; width: 100%; height: 100%;"><a href="javascript:void(0);">
 	<div id="menuentry_30ba40bc"  class="menu_3dae042d_mainMenuEntry mobileEntry" style="position:absolute; width:100px; height:34px; left:10px; ">
 		<div style="position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:20px; ">
@@ -86,6 +86,12 @@
 		</div>
 	</div>
 </a>
+<a href="javascript:void(0);">
+	<div id="menuentry_75018b1a"  class="menu_3dae042d_mainMenuEntry normalEntry" style="position:absolute; width:100px; height:34px; left:310px; ">
+		<div style="position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:0px; ">
+		</div>
+	</div>
+</a>
 
 	<script type="text/javascript" src="img/wsp_menu.js"></script>
 	<script type="text/javascript">
@@ -98,6 +104,7 @@
 		js_menu_3dae042d.createMenuForItem('menuentry_64f37254', []);
 		js_menu_3dae042d.createMenuForItem('menuentry_3f14847d', []);
 		js_menu_3dae042d.createMenuForItem('menuentry_567eab73', ["", 'javascript:void(0);', '']);
+		js_menu_3dae042d.createMenuForItem('menuentry_75018b1a', []);
 
 	</script>
             </div>
@@ -172,7 +179,9 @@
       <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_66ca5416">
         <div style="margin: 10px; display: block; " id="container_66ca5416_padding" >
           <div style="text-align:center;">
-            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">© 2024. All rights reserved. <br/><br/>Connect with us: [Social Media Icons] | </span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">© 2024. All rights reserved. <br/><br/>Connect with us: </span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="https://x.com/m4rb3ll" target="_blank">X/m4rb3ll</a></span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "> | </span>
             <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="privacy.html">Privacy Policy</a></span>
             <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">  | Bell's Beratung is committed to leading the way in cloud innovation, sustainability, and customer satisfaction. Our journey is powered by Azure, ensuring secure, scalable, and eco-friendly digital solutions for businesses worldwide.</span>
             </div>
