--- a/articles.html
+++ b/articles.html
@@ -37,35 +37,44 @@
 </head>
 <body style="background-color:#737373; padding:0;  margin: 0;">
 <div style="text-align:center;">
-<div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:201px; max-width:1024px; background-color:#FFFFFF; background-image: url(img/skyscraper1_dark.jpg); background-position:top center; background-size:cover; " id="container_31fc9f08"><div style="margin: 10px; display: block; " id="container_31fc9f08_padding" ><div style="text-align:center;">  <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/><br/><br/></span>
-<h1 style="vertical-align: bottom; position:relative; display: inline-block; background:none; font-size:24pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; text-align:left; font-weight:bold; " id="heading_5e5c8731">Bell's Blog</h1><span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span><span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; line-height: 1.5; ">Why we should care about </span>  <span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#E5B340; line-height: 1.5; ">clouds</span>
-</div>
-<div style="clear:both"></div></div></div><div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:14px; background-color:#2C2825; " id="container_146acaae"><div style="margin: 10px; display: block; " id="container_146acaae_padding" ><div style="text-align:center;">  <div id="menu_5ef93a62" style="vertical-align: bottom; position:relative; display: inline-block; width:203px; height:34px; max-width:800px; text-align:left; background:none; ">
-    <div  style="position: relative; overflow: hidden; width: 100%; height: 100%;"><a href="javascript:void(0);">
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:201px; max-width:1024px; background-color:#FFFFFF; background-image: url(img/skyscraper1_dark1.jpg); background-position:top center; background-size:cover; " id="container_31fc9f08">
+    <div style="margin: 10px; display: block; " id="container_31fc9f08_padding" >
+      <div style="text-align:center;">
+        <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/><br/><br/></span>
+<h1 style="vertical-align: bottom; position:relative; display: inline-block; background:none; font-size:24pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; text-align:left; font-weight:bold; " id="heading_5e5c8731">Bell's Blog</h1><span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span><span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; line-height: 1.5; ">Why we should care about </span>        <span style="font-size:16pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#E5B340; line-height: 1.5; ">clouds</span>
+        </div>
+      <div style="clear:both"></div>
+      </div>
+    </div>
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:14px; background-color:#2C2825; " id="container_146acaae">
+    <div style="margin: 10px; display: block; " id="container_146acaae_padding" >
+      <div style="text-align:center;">
+        <div id="menu_5ef93a62" style="vertical-align: bottom; position:relative; display: inline-block; width:203px; height:34px; max-width:800px; text-align:left; background:none; ">
+          <div  style="position: relative; overflow: hidden; width: 100%; height: 100%;"><a href="javascript:void(0);">
 	<div id="menuentry_5806d7d8"  class="menu_5ef93a62_mainMenuEntry mobileEntry" style="position:absolute; width:100px; height:34px; left:10px; ">
 		<div style="position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:20px; ">
-      <span style="font-size:13pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">Menu &#9660;</span>
+            <span style="font-size:13pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">Menu ▼</span>
 		</div>
 	</div>
 </a>
 <a href="index.html" style="text-decoration:none">
 	<div id="menuentry_4b711abb"  class="menu_5ef93a62_mainMenuEntry normalEntry" style="position:absolute; width:100px; height:34px; left:10px; ">
 		<div style="position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px; ">
-      <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">Home</span>
+            <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">Home</span>
 		</div>
 	</div>
 </a>
 <a href="about.html" style="text-decoration:none">
 	<div id="menuentry_6879060f"  class="menu_5ef93a62_mainMenuEntry normalEntry" style="position:absolute; width:100px; height:34px; left:110px; ">
 		<div style="position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px; ">
-      <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">About</span>
+            <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">About</span>
 		</div>
 	</div>
 </a>
 <a href="contact.html" style="text-decoration:none">
 	<div id="menuentry_2c8227ab"  class="menu_5ef93a62_mainMenuEntry normalEntry" style="position:absolute; width:100px; height:34px; left:210px; ">
 		<div style="position:absolute; top:0px; bottom:0px; left:0px; right:0px; margin-top:auto; margin-bottom:auto; margin-left:auto; margin-right:auto; height:18px; ">
-      <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">Articles</span>
+            <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#FFFFFF; font-weight:bold;  white-space: nowrap;">Articles</span>
 		</div>
 	</div>
 </a>
@@ -74,38 +83,81 @@
 	<script type="text/javascript">
 		var js_menu_5ef93a62= new wsp_menu('menu_5ef93a62', 'menu_5ef93a62', 10, null, true);
 
-		js_menu_5ef93a62.createMenuForItem('menuentry_5806d7d8', ["      <span style=\"font-size:15pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap;\">Home</span> ", 'index.html', '',
-		                                   "      <span style=\"font-size:15pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap;\">About</span> ", 'about.html', '',
-		                                   "      <span style=\"font-size:15pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap;\">Articles</span> ", 'contact.html', '']);
+		js_menu_5ef93a62.createMenuForItem('menuentry_5806d7d8', ["            <span style=\"font-size:15pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap;\">Home</span> ", 'index.html', '',
+		                                   "            <span style=\"font-size:15pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap;\">About</span> ", 'about.html', '',
+		                                   "            <span style=\"font-size:15pt; font-family:Arial, Helvetica, sans-serif; color:#FFFFFF;  white-space: nowrap;\">Articles</span> ", 'contact.html', '']);
 		js_menu_5ef93a62.createMenuForItem('menuentry_4b711abb', []);
 		js_menu_5ef93a62.createMenuForItem('menuentry_6879060f', []);
 		js_menu_5ef93a62.createMenuForItem('menuentry_2c8227ab', []);
 
 	</script>
+            </div>
+          </div>
+        </div>
+      <div style="clear:both"></div>
       </div>
     </div>
-</div>
-<div style="clear:both"></div></div></div><div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:70px; max-width:1024px; background-color:#FFFFFF; " id="container_170d175c"><div style="text-align:center;"><div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_d00e350"><div style="margin: 10px; display: block; " id="container_d00e350_padding" ><div style="text-align:left;"><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/>Embracing the cloud revolution, businesses are experiencing unprecedented scalability and flexibility. The first paragraph of a cloud-based blog could highlight this transformative shift, emphasizing how cloud computing, particularly through services like Azure, is not just an IT decision but a strategic business move that drives innovation and growth. It could also touch upon the environmental benefits, as cloud services are often more energy-efficient and contribute to a company's sustainability goals. <br/></span></div>
-<div style="text-align:center;"><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/> </span>  <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "> </span>
-  <a href="contact.html" style="text-decoration:none"><div id="button_6bb1ef27">
-    <div style="display: table; width: 100%; height: 100%;"><div style="display: table-cell; vertical-align: middle;">      <div style="text-align:left;">
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:70px; max-width:1024px; background-color:#FFFFFF; " id="container_170d175c">
+    <div style="text-align:center;">
+      <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_d00e350">
+        <div style="margin: 10px; display: block; " id="container_d00e350_padding" >
+          <div style="text-align:left;">
+<span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/>Embracing the cloud revolution, businesses are experiencing unprecedented scalability and flexibility. The first paragraph of a cloud-based blog could highlight this transformative shift, emphasizing how cloud computing, particularly through services like Azure, is not just an IT decision but a strategic business move that drives innovation and growth. It could also touch upon the environmental benefits, as cloud services are often more energy-efficient and contribute to a company's sustainability goals. <br/></span>            </div>
+          <div style="text-align:center;">
+<span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/> </span>            <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "> </span>
+            <a href="contact.html" style="text-decoration:none"><div id="button_6bb1ef27">
+              <div style="display: table; width: 100%; height: 100%;"><div style="display: table-cell; vertical-align: middle;">                <div style="text-align:left;">
+                  </div>
+                <div style="text-align:center;">
+                  <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Next Article</span>
+                  </div>
+                </div></div>
+              </div></a>
+            </div>
+          <div style="text-align:left;">
+            <span style="font-size:16pt; font-family:'Palatino Linotype', 'Book Antiqua3', Palatino, serif; color:#000000; line-height: 1.5; "><br/><br/></span>
+            </div>
+          <div style="clear:both"></div>
+          </div>
         </div>
-      <div style="text-align:center;">
-        <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Next Article</span>
+      </div>
+    </div>
+  <span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/></span>
+  <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:70px; max-width:1024px; background-color:#ECECEC; " id="container_3f6c2d6e">
+    <div style="text-align:center;">
+      <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/></span>
+      <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_14582392">
+        <div style="margin: 10px; display: block; " id="container_14582392_padding" >
+          <div style="text-align:left;">
+<div id="elem_2b8ad0d3" style="position:absolute; left:1%; top:7%; width:101%; height:25px; " >Components don't work in free edition</div>            </div>
+          <div style="clear:both"></div>
+          </div>
         </div>
-      </div></div>
-    </div></a>
-</div>
-<div style="text-align:left;">  <span style="font-size:16pt; font-family:'Palatino Linotype', 'Book Antiqua3', Palatino, serif; color:#000000; line-height: 1.5; "><br/><br/></span>
-</div>
-<div style="clear:both"></div></div></div></div>
-</div><span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/></span><div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:70px; max-width:1024px; background-color:#ECECEC; " id="container_3f6c2d6e"><div style="text-align:center;"><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/></span><div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_14582392"><div style="margin: 10px; display: block; " id="container_14582392_padding" ></div></div><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/><br/></span></div>
-</div><span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/></span><div style="vertical-align: top; position:relative; display: inline-block; width:96%; min-height:493px; max-width:1024px; background-color:#FFFFFF; " id="container_21c85519"><div style="text-align:center;"><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/><br/><br/><br/><br/><br/><br/></span><div style="vertical-align: bottom; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_5c17f023"><div style="margin: 10px; display: block; " id="container_5c17f023_padding" ><div style="text-align:center;">  <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">&#169; 2024. All rights reserved. <br/><br/>Connect with us: [Social Media Icons] | </span>
-  <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="privacy.html">Privacy Policy</a></span>
-  <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">  | Bell's Beratung is committed to leading the way in cloud innovation, sustainability, and customer satisfaction. Our journey is powered by Azure, ensuring secure, scalable, and eco-friendly digital solutions for businesses worldwide.</span>
-</div>
-</div></div><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/></span></div>
-<div style="text-align:left;"><div style="position:absolute; left:11%; top:3%; width:801px; height:141px; background:none; " id="text_52bab2b0"></div></div>
-</div><span style="font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/></span>  </div>
+<span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/><br/></span>      </div>
+    </div>
+  <span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/></span>
+  <div style="vertical-align: top; position:relative; display: inline-block; width:96%; min-height:493px; max-width:1024px; background-color:#FFFFFF; " id="container_21c85519">
+    <div style="text-align:center;">
+      <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/><br/><br/><br/><br/><br/><br/></span>
+      <div style="vertical-align: bottom; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_5c17f023">
+        <div style="margin: 10px; display: block; " id="container_5c17f023_padding" >
+          <div style="text-align:center;">
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">© 2024. All rights reserved. <br/><br/>Connect with us: </span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="https://x.com/m4rb3ll" target="_blank">X/m4rb3ll</a></span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "> | </span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="privacy.html">Privacy Policy</a></span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">  | Bell's Beratung is committed to leading the way in cloud innovation, sustainability, and customer satisfaction. Our journey is powered by Azure, ensuring secure, scalable, and eco-friendly digital solutions for businesses worldwide.</span>
+            </div>
+          </div>
+        </div>
+      <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/></span>
+      </div>
+    <div style="text-align:left;">
+      <div style="position:absolute; left:11%; top:3%; width:801px; height:141px; background:none; " id="text_52bab2b0">
+        </div>
+      </div>
+    </div>
+  <span style="font-size:10pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/></span>
+  </div>
 </body>
 </html>
