--- a/intro.html
+++ b/intro.html
@@ -138,12 +138,13 @@
       <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/></span>
       <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_2218d2b4">
         <div style="margin: 10px; display: block; " id="container_2218d2b4_padding" >
-          <div style="text-align:left;">
-<span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/></span>            </div>
           <div style="text-align:center;">
-<span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/></span>            </div>
-          <div style="text-align:left;">
-<span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/><br/></span>            </div>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">© 2024. All rights reserved. <br/><br/>Connect with us: </span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="https://x.com/m4rb3ll" target="_blank">X/m4rb3ll</a></span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "> | </span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; "><a href="privacy.html">Privacy Policy</a></span>
+            <span style="font-size:10pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#808080; line-height: 1.5; ">  | Bell's Beratung is committed to leading the way in cloud innovation, sustainability, and customer satisfaction. Our journey is powered by Azure, ensuring secure, scalable, and eco-friendly digital solutions for businesses worldwide.</span>
+            </div>
           </div>
         </div>
 <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; line-height: 1.5; "><br/><br/><br/><br/><br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; line-height: 1.5; "><br/></span>      </div>
