updated contact information

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,6 @@
 		{
 				#container_66a77ee4 { width:100% !important;  }
 				#container_785adad6 { width:100% !important;  }
-				#container_78d937b7 { width:100% !important;  }
 		}
 		@media only screen and (max-width: 450px)
 		{
@@ -117,23 +116,17 @@
       <div style="vertical-align: top; position:relative; display: inline-block; width:100%; min-height:150px; max-width:800px; background:none; " id="container_65d4ce54">
         <div style="margin: 10px; display: block; " id="container_65d4ce54_padding" >
           <div style="text-align:left;">
-            <div style="vertical-align: top; position:relative; display: inline-block; width:33%; min-height:150px; background:none; " id="container_66a77ee4">
+            <div style="vertical-align: top; position:relative; display: inline-block; float:left; width:48%; min-height:319px; background:none; " id="container_66a77ee4">
               <div style="margin: 10px; display: block; " id="container_66a77ee4_padding" >
                 <div style="text-align:left;">
-<span style="font-size:14pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Best Service</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/>I offer comprehensive cloud consulting and training services designed to help businesses navigate the complexities of cloud computing. My consulting services include cloud strategy planning, migration, and infrastructure management, ensuring your organization leverages the full potential of cloud technology. </span>                  </div>
+<span style="font-size:14pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Best Service</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/>I offer comprehensive cloud consulting services to help businesses navigate the complexities of cloud computing. <br/><br/>My consulting services include:<br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Cloud Strategy Planning</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">: Developing a robust cloud strategy aligned with your business goals.<br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Cloud Migration</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">: Managing the entire migration process for a smooth transition.<br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; font-weight:bold; ">Infrastructure Management</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">: Providing ongoing management to optimize performance, enhance security, and ensure scalability.<br/></span>                  </div>
                 </div>
               </div>
-            <div style="vertical-align: top; position:relative; display: inline-block; width:33%; min-height:329px; background:none; " id="container_785adad6">
+            <div style="vertical-align: top; position:relative; display: inline-block; float:right; width:48%; min-height:329px; background:none; " id="container_785adad6">
               <div style="margin: 10px; display: block; " id="container_785adad6_padding" >
                 <div style="text-align:left;">
-<span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Training</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">Additionally, I provide tailored training programs to equip your team with the necessary skills to manage and optimize cloud environments effectively. Whether you’re looking to adopt cloud solutions or enhance your existing infrastructure, my expertise will guide you through every step of the process, ensuring a seamless and efficient transition.</span>                  <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "> </span>
+<span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Training</span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "><br/><br/></span><span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; ">Additionally, I provide tailored training programs to equip your team with the necessary skills to manage and optimize cloud environments effectively. <br/><br/>Whether you’re looking to adopt cloud solutions or enhance your existing infrastructure, my expertise will guide you through every step of the process, ensuring a seamless and efficient transition.</span>                  <span style="font-size:12pt; font-family:Segoe, 'Segoe UI', 'Helvetica Neue', sans-serif; color:#000000; "> </span>
                   </div>
-                </div>
-              </div>
-            <div style="vertical-align: top; position:relative; display: inline-block; width:34%; min-height:296px; background:none; " id="container_78d937b7">
-              <div style="margin: 10px; display: block; " id="container_78d937b7_padding" >
-                <div style="text-align:left;">
-<span style="font-size:14pt; font-family:Arial, Helvetica, sans-serif; color:#000000; font-weight:bold; ">Costmanagement</span><span style="font-size:12pt; font-family:Arial, Helvetica, sans-serif; color:#000000; "><br/><br/>I specialize in cloud consulting and training services with a strong emphasis on cost management. My consulting services include developing cost-effective cloud strategies, optimizing resource allocation, and implementing cost-saving measures to ensure your organization maximizes its cloud investment.</span>                  </div>
                 </div>
               </div>
             </div>
